# luaur

./: .git-blame-ignore-revs  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md
benchmarks/drivers/mlua-run/: Cargo.toml  build.sh
benchmarks/drivers/mlua-run/src/: main.rs
benchmarks/drivers/tsuki-run/: Cargo.toml
benchmarks/drivers/tsuki-run/src/: main.rs
crates/luaur/: Cargo.toml
crates/luaur-ast-cli/: Cargo.toml
crates/luaur-ast-cli/src/: lib.rs  main.rs
crates/luaur-ast-cli/src/functions/: assertion_handler.rs  display_help.rs  main.rs  mod.rs
crates/luaur-checked-macros/: Cargo.toml
crates/luaur-checked-macros/src/: expand_file.rs  expand_inline.rs  file_input.rs  inline_input.rs  lib.rs  module_entry.rs  paths.rs  report.rs
crates/luaur-common/: Cargo.toml
crates/luaur-common/src/: lib.rs  string_utils_tests.rs  wasm_libc.rs
crates/luaur-common/src/functions/: assert_call_handler.rs  create_thread.rs  create_token.rs  flush_events.rs  get_clock_period.rs  get_clock_timestamp.rs  hash_range.rs  release_thread.rs  visit_variant.rs
crates/luaur-common/src/methods/: small_vector_small_vector_small_vector_alt_b.rs
crates/luaur-common/src/records/: f_value.rs
crates/luaur-conformance/: Cargo.toml
crates/luaur-conformance/src/enums/: direct_slot.rs  mod.rs
crates/luaur-conformance/src/functions/: add_test_callback.rs  alloc.rs  analyze_file.rs  blockable_realloc.rs  blockable_realloc_allowed.rs  c_yielding_iterator.rs  c_yielding_iterator_continuation.rs  compare_member_name.rs  conformance_api_atoms_useratom.rs  conformance_api_calls_check_not_yieldable.rs  conformance_c_yield_setup.rs  conformance_coverage_callback.rs  conformance_coverage_getcoverage.rs  conformance_coverage_setup.rs  conformance_debugger_breakpoint.rs  conformance_debugger_debug_break.rs  conformance_debugger_debug_interrupt.rs  conformance_debugger_debug_step.rs  conformance_debugger_setup.rs  conformance_debugger_yield.rs  conformance_exception_object_capture_exception.rs  conformance_gc_dump_edge.rs  conformance_gc_dump_node.rs  conformance_gc_set_block_allocations.rs  conformance_gc_setup.rs  conformance_interrupt_error_inspection_interrupt.rs  conformance_interrupt_inspection_hook.rs  conformance_interrupt_inspection_interrupt.rs  conformance_interrupt_inspection_setup.rs  conformance_interrupt_inspection_yield.rs  conformance_interrupt_interrupt.rs  conformance_iter_setup.rs  conformance_n_debug_get_up_value_yield.rs  conformance_native_type_annotations_setup.rs  conformance_native_userdata_remapper.rs  conformance_native_userdata_setup.rs  conformance_new_userdata_overflow_callback.rs  conformance_new_userdata_overflow_dtor.rs  conformance_p_call_resume_error.rs  conformance_p_call_setup.rs  (+150 more)
crates/luaur-conformance/src/macros/: doctest_config_implement.rs  get_cwd.rs  mod.rs
crates/luaur-conformance/src/methods/: boost_like_reporter_boost_like_reporter.rs  boost_like_reporter_log_assert.rs  boost_like_reporter_log_message.rs  boost_like_reporter_report_query.rs  boost_like_reporter_subcase_end.rs  boost_like_reporter_subcase_start.rs  boost_like_reporter_test_case_end.rs  boost_like_reporter_test_case_exception.rs  boost_like_reporter_test_case_reenter.rs  boost_like_reporter_test_case_skipped.rs  boost_like_reporter_test_case_start.rs  boost_like_reporter_test_run_end.rs  boost_like_reporter_test_run_start.rs  feedback_vector_fixture_compile.rs  feedback_vector_fixture_feedback_vector_fixture.rs  feedback_vector_fixture_load.rs  feedback_vector_fixture_run.rs  lowering_fixture_get_codegen_assembly.rs  lowering_fixture_get_codegen_assembly_using_c_api.rs  lowering_fixture_get_codegen_header.rs  lowering_fixture_initialize_codegen.rs  lowering_fixture_lowering_fixture.rs  mod.rs  scoped_f_value_drop.rs  scoped_f_value_new.rs  team_city_reporter_log_assert.rs  team_city_reporter_log_message.rs  team_city_reporter_report_query.rs  team_city_reporter_subcase_end.rs  team_city_reporter_team_city_reporter.rs  team_city_reporter_test_case_end.rs  team_city_reporter_test_case_exception.rs  team_city_reporter_test_case_reenter.rs  team_city_reporter_test_case_start.rs  team_city_reporter_test_run_end.rs  team_city_reporter_test_run_start.rs
crates/luaur-conformance/src/records/: assert_inliner_data.rs  boost_like_reporter.rs  conformance_debugger_state.rs  conformance_gc_dump_enum_context.rs  conformance_gc_dump_node.rs  conformance_interrupt_state.rs  mod.rs  (+13 more)
crates/luaur-rt/: Cargo.toml
crates/luaur-rt-derive/: Cargo.toml
crates/luaur-rt-derive/src/: attr.rs  from_lua.rs  lib.rs  userdata.rs
crates/luaur-rt/src/: app_data.rs  async.rs  buffer.rs  callback.rs  chunk.rs  compiler.rs  conversion.rs  debug.rs  error.rs  exec_raw.rs  ffi.rs  ffi_public.rs  function.rs  gc.rs  interrupt.rs  lib.rs  light_userdata.rs  luau_ext.rs  memory.rs  metamethod.rs  module.rs  multi.rs  options.rs  registry.rs  scope.rs  state.rs  string.rs  sync.rs  table.rs  tests.rs  thread.rs  traits.rs  typecheck.rs  userdata.rs  value.rs  vector.rs
crates/luaur-rt/tests/: ATTRIBUTION.md  issue6_repro_check.rs  luaur_typecheck.rs  mlua_async.rs  mlua_buffer.rs  mlua_byte_string.rs  mlua_compile.rs  mlua_conversion.rs  mlua_core.rs  mlua_debug.rs  mlua_error.rs  mlua_function.rs  mlua_hooks.rs  mlua_luau.rs  mlua_memory.rs  mlua_multi.rs  mlua_scope.rs  mlua_send.rs  mlua_serde.rs  mlua_string.rs  mlua_table.rs  mlua_thread.rs  mlua_types.rs  mlua_userdata.rs  mlua_userdata_macro.rs  mlua_value.rs  os_date.rs  string_format.rs
crates/luaur-unit-test/: Cargo.toml
crates/luaur-unit-test/src/: lib.rs
crates/luaur/examples/: compile_to_bytecode.rs  embed_vm.rs  parse_ast.rs  run_script.rs
crates/luaur/src/: check.rs  lib.rs
crates/luaur/tests/: checked_macros.rs
examples/compile_to_bytecode/: Cargo.toml
examples/compile_to_bytecode/src/: main.rs
examples/embed_rust/: Cargo.toml
examples/embed_rust/src/: main.rs
examples/embed_vm/: Cargo.toml
examples/embed_vm/src/: main.rs
examples/parse_ast/: Cargo.toml
examples/parse_ast/src/: main.rs
(+14217 files in other folders)
