[package]
name = "luaur-conformance"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
luaur-analysis = { path = "../luaur-analysis", version = "0.1.2" }
luaur-ast = { path = "../luaur-ast", version = "0.1.2" }
luaur-bytecode = { path = "../luaur-bytecode", version = "0.1.2" }
luaur-code-gen = { path = "../luaur-code-gen", version = "0.1.2" }
luaur-common = { path = "../luaur-common", version = "0.1.2" }
luaur-compiler = { path = "../luaur-compiler", version = "0.1.2" }
luaur-config = { path = "../luaur-config", version = "0.1.2" }
luaur-vm = { path = "../luaur-vm", version = "0.1.2" }

[features]
default = ["std"]
std = []
native = ["std"]
cli = ["native"]
native-codegen = ["native"]
wasm = ["dep:wasm-bindgen"]
