[package]
name = "luaur-rt-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Procedural derive macros (`UserData`, `FromLua`) for luaur-rt, the mlua-style API of luaur (pure-Rust Luau)."
keywords = ["luau", "lua", "mlua", "derive", "userdata"]
categories = ["api-bindings", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
