# Example crate: compile Luau source to bytecode with luaur.
#     cargo run -p luaur-example-compile-to-bytecode
[package]
name = "luaur-example-compile-to-bytecode"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# In your own project this would be: luaur = "0.1"
luaur = { path = "../../crates/luaur" }
