# Example crate: parse Luau to an AST and inspect diagnostics.
#     cargo run -p luaur-example-parse-ast
[package]
name = "luaur-example-parse-ast"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# In your own project this would be: luaur = "0.1"
luaur = { path = "../../crates/luaur" }
